- Add API endpoint `@trigger-task-template` to create tasks in a dossier from a template. [deiferni]
- Extend the @favorites endpoint to let it return already resolved favorites. [elioschmutz]
- Use correct response type for proposal comment responses. [njohner]
- Add expandable endpoint @tasktree for getting task hierarchy. [buchi]


2020.3.0 (2020-06-18)
---------------------

- Bump setuptools to 44.1.1 and zc.buildout to 2.13.3. [tinagerber]
- Update translations of error messages when moving objects. [tinagerber]
- Allow filtering for empty strings in @listing endpoint. [tinagerber]
- Allow negation of a filter query in @listing endpoint. [tinagerber]
- Implement batching for the @solrsearch endpoint. [elioschmutz]
- Fix contact query sources for contacts without an E-mail. [njohner]
- Make available the delete action for templates. [mbaechtold]
- Drop import_stamp column from user model. [tinagerber]
- Define a set of columns that get synchronized in user and group model. [tinagerber]
- Handle depth filter in solrsearch endpoint. [njohner]
- Add OGDSGroupActor class. [njohner]
- Explicitly log to sentry for two `ftw.solr` modules we want to monitor well at the moment. [deiferni]
- Add @transfer-task endpoint to change issuer and responsible of a task. [tinagerber]
- Add possibility to suppress notification with X-GEVER-SuppressNotifications header. [tinagerber]
- Add @assigned-users endpoint to get all active users of the client. [tinagerber]
- Set Reply-To header from mails sent on behalf of users. [lgraf]
- Avoid sending mails with From-Addresses other than our own. [lgraf]
- Fix bug with setting issuer and informed_principals on forwardings. [njohner]
- Allow notifying users and groups when creating a new task. [njohner]
- Add last login information to user. [tinagerber]
- Bump ftw.casauth to 1.3.0 to handle login similar to PlonePAS in @caslogin endpoint. [tinagerber]
- Enable API endpoint `@document-from-template` for tasks. [mbaechtold]