@@ -21,7 +21,7 @@ class TestCreateEmailCommand(IntegrationTestCase):
         self.assertEqual('message/rfc822', mail.message.contentType)
         self.assertEqual('No Subject.eml', mail.message.filename)
 
-        self.assertEqual(u'testm\xe4il.msg', mail.original_message.filename)
+        self.assertEqual(u'No Subject.msg', mail.original_message.filename)
         self.assertEqual('mock-msg-body', mail.original_message.data)
 
 
